--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/react-dom": "^18.2.15",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "cookies-next": "^4.1.0",
     "crypto-js": "^4.2.0",
     "qs": "^6.11.2",
     "react": "^18.2.0",
