--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@babel/plugin-transform-runtime": "^7.16.7",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@monaco-editor/react": "^4.6.0",
     "@reduxjs/toolkit": "^1.9.7",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
@@ -59,6 +60,8 @@
     "bootstrap": "^5.3.2",
     "cookies-next": "^4.1.0",
     "crypto-js": "^4.2.0",
+    "monaco-editor": "^0.44.0",
+    "monaco-themes": "^0.4.4",
     "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
